[package]
name = "para"
version = "0.2.0"
authors = ["Maor Kleinberger <kmaork@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A dataflow/pipeline parallelization framework"
repository = "https://github.com/kmaork/para"
readme = "README.md"
categories = ["concurrency"]

[dependencies]
crossbeam-channel = "0.5.0"
rich-phantoms = "0.1.0"
crossbeam="0.8.0"

[[bin]]
name = "add"
path = "profiling/add.rs"

[profile.release]
debug = true