[package]
name = "para"
version = "0.2.0"
authors = ["Maor Kleinberger <kmaork@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A dataflow/pipeline parallelization framework"
repository = "https://github.com/kmaork/para"
readme = "README.md"
categories = ["concurrency"]

[dependencies]
rich-phantoms = "0.1.0"
crossbeam="0.8.0"

[profile.release]
opt-level = 3
debug = true

[profile.bench]
opt-level = 3
debug = true

[dev-dependencies]
criterion = "0.3.3"

[[bin]]
name = "profile"
path = "profiling/profile.rs"

[[bin]]
name = "whoa"
path = "whoa.rs"
